# COMP529-Parallel-Programming

./: .gitignore
MeshReconstruction/lib/: Cube.h  DataStructs.h  MeshReconstruction.cpp  MeshReconstruction.h  Triangulation.cpp  Triangulation.h
Project 1/MeshReconstruction/Part 1/demo/: main.cpp
Project 1/MeshReconstruction/Part 1/lib/: Cube.cpp  DataStructs.h  MeshReconstruction.cpp  MeshReconstruction.h
Project 1/MeshReconstruction/Part 2/demo/: CMakeLists.txt  main.cpp
Project 1/MeshReconstruction/Part 2/lib/: CMakeLists.txt  Cube.h  MeshReconstruction.cpp
Project 1/MeshReconstruction/Part 3/: CMakeLists.txt
Project 1/MeshReconstruction/Part 3/lib/: IO.cpp
Project 1/MeshReconstruction/demo/: main.cpp
Project 1/MeshReconstruction/lib/: Cube.cpp  IO.cpp  IO.h  MeshReconstruction.cpp  MeshReconstructionDefault.cpp  Triangulation.cpp  Triangulation.h
Project 2/cardiacSimGPU/: cardiacsim_kernels.cu  cpu  gpu
Project 3/: job_script.sh
Project 3/src/: CMakeLists.txt  bfs_main.cpp  bfs_sequential.cpp  mpi_frontier.cpp  mpi_vertex_dist.cpp
Project 3/starter/: bfs_main.cpp  mpi_vertex_dist.cpp
